fixing chart bar alignment

--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ div, span{
   height: 100%;
   width: calc((100% / 6) - 15px);
   border: 1px solid darkorchid;
+  align-self: flex-end;
 }
 
 
